--- a/html/Edris.html
+++ b/html/Edris.html
@@ -4,9 +4,9 @@
 
 <head>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
-<link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
+<link rel="shortcut icon" type="image/png" href="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title>Tenis Club Idu</title>
@@ -21,11 +21,11 @@
 
 <ul id="nav">
 
-<a href="index.html">
-	<img src="Poze/icon1.jpg" id="icon"/>
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
 </a>
 
-<li><a href="index.html">Acasa</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
 
 <div class="dropdown">
 
@@ -33,18 +33,18 @@
 
   <div class="dropdown-content">
 
-    <a href="Halep.html">Simona Halep</a>
-    <a href="Boitan.html">Adrian Boitan</a>
-    <a href="Edris.html">Edris Fetisleam</a>  
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
 
   </div>
 
 </div>
 
-<li><a href="evenimente.html">Evenimente</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
 
-<li><a href="contact.html">Contact</a></li>
-	<li><a href="inregistrare.html">Inregistrare</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
 
 </ul>
 			<div id="content-box1">
@@ -55,7 +55,8 @@
 						cu care a continuat până la 14 ani, reușind împreună cu acesta să creeze o relație unică jucător-antrenor cu rezultate remarcabile. Din motive ale antrenorului,la 10 ani Edris s-a mutat la CS Știință Constanța, continuând antrenamentele cu antrenorul lui la acest club.
 						A ajuns multiplu campion național la simplu și la dublu la aproape toate categoriile de vârstă, a câștigat turnee internaționale
 						și a participat la cele mai mari turnee dedicate juniorilor din Europa.</span>
-						<img class="pic2" src="Poze/edris.jpg" />
+						<br>
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\edris.jpg" />
 				</ul>
 				<ul>
 						<span> La vârstă de 14 ani a plecat la Tenis Club Idu unde s-a antrenat cu Damian Petcu timp de 4 ani, reușind până la vârstă de 18 ani numeroase 
@@ -63,10 +64,10 @@
 						a făcut pasul mare spre tenisul profesionist câștigând 2 turnee ITF în Turcia cu premii totale de 15.000$. 
 						Astfel, în câteva săptămâni a urcat mult în clasamentul mondial, până pe poziția 673 ATP. Rezultatele bune i-au adus și o convocare la echipa ce reprezenta România la Cupa Davis și a debutat cu victorie în întâlnirea din 2018 cu Tunisia.</span>
 				</ul>
-						<img class="pic1" src="Poze/edris1.jpg" id="edris" />
+						<img class="pic1" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\edris1.jpg" id="edris" />
 			</div>
 			<br>
-<script type="text/javascript" src="fisier2.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
 
 </body>
 
