--- a/html/Halep.html
+++ b/html/Halep.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
-<link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
+<link rel="shortcut icon" type="image/png" href="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 
@@ -19,28 +19,30 @@
 
 <ul id="nav">
 
-<a href="index.html">
-	<img src="Poze/icon1.jpg" id="icon"/>
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
 </a>
 
-<li><a href="index.html">Acasa</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
 
 <div class="dropdown">
 
   <a>Sportivi</a>
 
   <div class="dropdown-content">
-    <a href="Halep.html">Simona Halep</a>
-    <a href="Boitan.html">Adrian Boitan</a>
-    <a href="Edris.html">Edris Fetisleam</a>
+
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
 
   </div>
 
 </div>
 
-<li><a href="evenimente.html">Evenimente</a></li>
-<li><a href="contact.html">Contact</a></li>
-	<li><a href="inregistrare.html">Inregistrare</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
 
 
 </ul>
@@ -58,7 +60,7 @@
 
 						ca lider al circuitului. Simona a încheiat anii 2017 și 2018 pe primul loc în lume în clasamentul WTA, iar în prezent ea se află pe locul 4 mondial.</span>
 						<br>
-						<img class="pic2" src="Poze/halep1.jpg" />
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\halep1.jpg" />
 
 				</ul>
 
@@ -73,10 +75,10 @@
 
 				</ul>
 
-						<img class="pic1" src="Poze/halep2.jpg" id="halep" />
+						<img class="pic1" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\halep2.jpg" id="halep" />
 			</div>
 			<br>
-<script type="text/javascript" src="fisier2.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
 
 </body>
 
