--- a/html/evenimente.html
+++ b/html/evenimente.html
@@ -3,31 +3,47 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
-<link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
+<link rel="shortcut icon" type="image/png" href="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title>Tenis Club Idu</title>
+
 </head>
+
 <div class="header"></div>
+
 <body>
+
+
+
 <ul id="nav">
-<a href="index.html">
-	<img src="Poze/icon1.jpg" id="icon" />
+
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
 </a>
-<li><a href="index.html">Acasa</a></li>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
+
 <div class="dropdown">
+
   <a>Sportivi</a>
+
   <div class="dropdown-content">
-    <a href="Halep.html">Simona Halep</a>
-    <a href="Boitan.html">Adrian Boitan</a>
-    <a href="Edris.html">Edris Fetisleam</a>  
+
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
+
   </div>
+
 </div>
-<li><a href="evenimente.html">Evenimente</a></li>
-<li><a href="contact.html">Contact</a></li>
-	<li><a href="inregistrare.html">Inregistrare</a></li>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
 
 </ul>
 		<div id="content">
@@ -45,7 +61,7 @@
 						</span>
 				</ul>
 				<ul>
-						<img class="pic2" src="Poze/Platinum.jpg" />
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\Platinum.jpg" />
 				</ul>
 			</div>
 		<div id="content">
@@ -57,7 +73,7 @@
 						surprinși cei mai promițători juniori din toată Europa, România având însă cei mai mulți jucători participanți. Competiţia este înscrisă în calendarul Tennis Europe Juniors Tour, fiind clasficată la categoria a II-a, 
 						participând cu regularitate reprezentanţi din Bulgaria, Franţa, Moldova, Serbia şi Slovenia, alături de reprezentanţii României. Meciurile sunt mereu de o calitate înalta, competitivitatea acestor juniori promițători fiind foarte mare.</span>
 						<br>
-						<img class="pic2" src="Poze/Juniors.jpg" />
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\Juniors.jpg" />
 				</ul>
 				<ul>
 						<span></span>
@@ -77,12 +93,12 @@
 				</ul>
 				<ul>
 				<video id="videoFed" controls>
-					<source src="Video/FedCup.mp4" type="video/mp4">
+					<source src="C:\Users\Andrei\Desktop\Proiect Javascript\Video\FedCup.mp4" type="video/mp4">
 				</video>
 			</div>
 			<br>
 		</div>
-			<script type="text/javascript" src="fisier2.js"></script>
+			<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
 
 </body>
 
