--- a/html/index.html
+++ b/html/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
-<link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
+<link rel="shortcut icon" type="image/png" href="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title>Tenis Club Idu</title>
 
 </head>
 
-	<div class="header"></div>
-	<body>
+<div class="header"></div>
 
-	<ul id="nav">
-	<a href="index.html">
-		<img src="Poze/icon1.jpg" id="icon" />
-	</a>
-	<li><a href="index.html">Acasa</a></li>
+<body>
 
-	<div class="dropdown">
 
-	  <a>Sportivi</a>
 
-	  <div class="dropdown-content">
+<ul id="nav">
 
-		<a href="Halep.html">Simona Halep</a>
-		<a href="Boitan.html">Adrian Boitan</a>
-		<a href="Edris.html">Edris Fetisleam</a>  
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
+</a>
 
-	  </div>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
 
-	</div>
+<div class="dropdown">
 
-		<li><a href="evenimente.html">Evenimente</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		<li><a href="inregistrare.html">Inregistrare</a></li>
+  <a>Sportivi</a>
+
+  <div class="dropdown-content">
+
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
+
+  </div>
+
+</div>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
+
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
 
 	</ul>
 
@@ -66,7 +72,7 @@
 						ajutandu-i să asimileze primele mișcări ale corpului necesare pe teren, să îi ducă către un nivel mediu, iar pe copii să îi învețe cum este un meci de tenis și să meargă la primele concursuri ale lor.
 						</span>
 						<br>
-						<img class="pic2" src="Poze/tenisclubidu.jpg" />
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\tenisclubidu.jpg" />
 
 				</ul>
 				<ul>
@@ -78,7 +84,7 @@
 						</span>
 
 				</ul>
-						<img class="pic1" src="Poze/tenisclubidu2.jpg" id="club" />
+						<img class="pic1" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\tenisclubidu2.jpg" id="club" />
 				<ul>
 						<span>	În completarea programelor de pregătire sportivă de performanță, Tenis Club Idu organizează
 						competiții la nivel național și internațional pentru jucătorii de orice vârstă. Clubul din Mamaia este recunoscut pentru cât de multă atenție acordă organizării concursurilor,
@@ -87,13 +93,13 @@
 						<br>
 				</ul>
 				<video controls>
-					<source src="Video/Arenele IDU Constanta.mp4" type="video/mp4">
+					<source src="C:\Users\Andrei\Desktop\Proiect Javascript\Video\Arenele IDU Constanta.mp4" type="video/mp4">
 				</video>
 			</div>
 			<br>
 		</div>
 
-	<script type="text/javascript" src="fisier2.js"></script>
+	<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
 
 	</body>
 </html>
