--- a/html/inregistrare.html
+++ b/html/inregistrare.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
 <link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,29 +16,34 @@
 
 <body>
 
+
+
 <ul id="nav">
 
-<a href="index.html">
-	<img src="Poze/icon1.jpg" id="icon"/>
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
 </a>
 
-<li><a href="index.html">Acasa</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
 
 <div class="dropdown">
+
   <a>Sportivi</a>
+
   <div class="dropdown-content">
-    <a href="Halep.html">Simona Halep</a>
-    <a href="Boitan.html">Adrian Boitan</a>
-    <a href="Edris.html">Edris Fetisleam</a>  
+
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
+
   </div>
 
 </div>
 
-<li><a href="evenimente.html">Evenimente</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
 
-<li><a href="contact.html">Contact</a></li>
-	<li><a href="inregistrare.html">Inregistrare</a></li>
-
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
 </ul>
 			<div id="content-box1">
 
@@ -74,8 +79,8 @@
 								<br>
 
 								Gen:
-								<input type="radio" id="gender" value="Barbat">Barbat
-								<input type="radio" id="gender" value="Femeie">Femeie
+								<input type="radio" id="gender" value="masculin">Barbat
+								<input type="radio" id="feminin" value="feminin">Femeie
 								<div id="checkgen"></div>
 								<br>
 								<label>Varsta</label>
@@ -102,16 +107,16 @@
 									Verifica-ma
 								  </label>
 								</div>
-								  <input type="submit" value="Inregistrare" id="submit" >
+								  <input type="submit" value="Inregistrare" id="submit"  >
 					</div>
 				</ul>
 			<br>
 
 </div>
-<script type="text/javascript" src="fisier.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-<script type="text/javascript" src="fisier2.js"></script>
-<script type="text/javascript" src="checkbox.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\checkbox.js"></script>
 
 
 
