--- a/html/Boitan.html
+++ b/html/Boitan.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="media.css">
-<link rel="shortcut icon" type="image/png" href="Poze/icon.png"/>
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\style.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\Andrei\Desktop\Proiect Javascript\css\media.css">
+<link rel="shortcut icon" type="image/png" href="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title>Tenis Club Idu</title>
@@ -15,29 +17,35 @@
 
 <body>
 
+
+
 <ul id="nav">
 
-<a href="index.html">
-	<img src="Poze/icon1.jpg" id="icon"/>
+<a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">
+	<img src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\icon1.jpg" id="icon"/>
 </a>
 
-<li><a href="index.html">Acasa</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\index.html">Acasa</a></li>
 
 <div class="dropdown">
+
   <a>Sportivi</a>
+
   <div class="dropdown-content">
-    <a href="Halep.html">Simona Halep</a>
-    <a href="Boitan.html">Adrian Boitan</a>
-    <a href="Edris.html">Edris Fetisleam</a>  
+
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Halep.html">Simona Halep</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Boitan.html">Adrian Boitan</a>
+    <a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\Edris.html">Edris Fetisleam</a>  
 
   </div>
 
 </div>
 
-<li><a href="evenimente.html">Evenimente</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\evenimente.html">Evenimente</a></li>
 
-<li><a href="contact.html">Contact</a></li>
-	<li><a href="inregistrare.html">Inregistrare</a></li>
+<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\contact.html">Contact</a></li>
+	<li><a href="C:\Users\Andrei\Desktop\Proiect Javascript\html\inregistrare.html">Inregistrare</a></li>
+
 
 </ul>
 			<div id="content-box1">
@@ -49,7 +57,7 @@
 			
 						</span>
 						<br>
-						<img class="pic2" src="Poze/boitan.jpg" />
+						<img class="pic2" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\boitan.jpg" />
 
 				</ul>
 				<ul>
@@ -57,11 +65,11 @@
 						care să-l ajute să participe în continuare la turnee cât mai bune. Cea mai buna clasare a lui de până acum este locul 833 ATP. În prezent, urmează cursurile Universității Baylor din Waco, statul Texas și face parte din echipa de tenis a Universității
 						cu care participă la competiții importante din campionatul studențesc al Statelor Unite ale Americii.</span>
 				</ul>
-						<img class="pic1" src="Poze/boitan1.jpg" id="boitan" />
+						<img class="pic1" src="C:\Users\Andrei\Desktop\Proiect Javascript\Poze\boitan1.jpg" id="boitan" />
 			</div>
 			<br>
 
-<script type="text/javascript" src="fisier2.js"></script>
+<script type="text/javascript" src="C:\Users\Andrei\Desktop\Proiect Javascript\js\fisier2.js"></script>
 
 </body>
 
